SONARIAC-2274 S6505: Allowing shell scripts execution during package installation is security-sensitive (#512)
GitOrigin-RevId: 37a038ffeff21bf52b60dc8b706cdbd135e5ff69